--- a/index.html
+++ b/index.html
@@ -2,14 +2,66 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Админ бот</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:waht@200;500&display=swap');
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 200;
+            color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
+        }
+
+        #main {
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin-top: 50px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            width: 350px;
+            margin: 0 auto;
+        }
+
+        button {
+            border: 0;
+            border-radius: 5px;
+            margin-top: 50px;
+            height: 60px;
+            width: 200px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 500ms ease;
+            color: var(--tg-theme-button-color);
+            background: var(--tg-theme-button-text-color);
+        }
+        button:hover {
+            background: var(--tg-theme-secondary-bg-color);
+        }
+
+
+
+    </style>
 </head>
 <body>
     <div id="main">
         <h1>Админ бот</h1>
         <p>Текст</p>
-        <button>Кнопка</button>
+        <button id="start">Кнопка</button>
     </div>
+    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
 </body>
-
 </html>
