--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
             background: var(--tg-theme-secondary-bg-color);
         }
 
+        #form {
+            display: none;
+            text-align: center;
+        }
+
+        input {
+            width: 90%;
+            outline: none;
+            margin: 10px 5%;
+            padding: 15px 10px;
+            font-size: 14px;
+            border: 2px solid silver;
+            border-radius: 5px;
+
+        }
+        input:focus {
+            border-color: #db5d5d;
+
+        }
 
 
     </style>
@@ -62,6 +81,29 @@
         <p>Текст</p>
         <button id="start">Кнопка</button>
     </div>
+    <form id="form">
+        <input type="text" placeholder="Имя" id="user_name">
+        <input type="text" placeholder="Почта" id="user_email">
+        <input type="text" placeholder="Телефон" id="user_phone">
+        <button id="order">Оформить</button>
+    </form>
     <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
+    <script>
+        let tg = window.Telegram.WebApp;
+        let buy = document.getElementById('buy');
+        let order = document.getElementById('order');
+
+
+        buy.addEventListener('click', () => {
+            document.getElementById("main").style.display = "none";
+            document.getElementById("form").style.display = "block";
+            document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name
+            
+        });
+
+        order.addEventListener("click", () => {
+            tg.close();
+        })
+    </script>
 </body>
 </html>
