--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Админ бот</title>
+    <title>Адмн бот</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:waht@200;500&display=swap');
         * {
