--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
     <div id="main">
-        <h1>Админ бот</h1>
+        <h1>Амин бот</h1>
         <p>Текст</p>
         <button id="start">Кнопка</button>
     </div>
@@ -90,7 +90,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
     <script>
         let tg = window.Telegram.WebApp;
-        let buy = document.getElementById('buy');
+        let buy = document.getElementById('start');
         let order = document.getElementById('order');
 
 
@@ -107,3 +107,4 @@
     </script>
 </body>
 </html>
+
