--- a/index.html
+++ b/index.html
@@ -1,329 +1,209 @@
+
+<!--Design by foolishdeveloper.com-->
+
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Админ бот</title>
+    <title>Document</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:waht@200;500&display=swap');
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+        *{
+          list-style: none;
+          text-decoration: none;
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          font-family: 'Open Sans', sans-serif;
         }
 
-        body {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: 200;
-            color: var(--tg-theme-text-color);
-            background: var(--tg-theme-bg-color);
+        body{
+          background: #f5f6fa;
         }
 
-        #main {
-            width: 100%;
-            padding: 20px;
-            text-align: center;
+        .wrapper .sidebar{
+          background: rgb(5, 68, 104);
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 225px;
+          height: 100%;
+          padding: 20px 0;
+          transition: all 0.5s ease;
         }
 
-        h1 {
-            margin-top: 50px;
-            margin-bottom: 10px;
+        .wrapper .sidebar .profile{
+          margin-bottom: 30px;
+          text-align: center;
         }
 
-        p {
-            width: 350px;
-            margin: 0 auto;
+        .wrapper .sidebar .profile img{
+          display: block;
+          width: 100px;
+          height: 100px;
+            border-radius: 50%;
+          margin: 0 auto;
         }
 
-        button {
-            border: 0;
-            border-radius: 5px;
-            margin-top: 50px;
-            height: 60px;
-            width: 200px;
-            font-size: 20px;
-            font-weight: 500;
-            cursor: pointer;
-            transition: all 500ms ease;
-            color: var(--tg-theme-button-color);
-            background: var(--tg-theme-button-text-color);
-        }
-        button:hover {
-            background: var(--tg-theme-secondary-bg-color);
+        .wrapper .sidebar .profile h3{
+          color: #ffffff;
+          margin: 10px 0 5px;
         }
 
-        #form {
-            display: none;
-            text-align: center;
+        .wrapper .sidebar .profile p{
+          color: rgb(206, 240, 253);
+          font-size: 14px;
         }
 
-        input {
-            width: 90%;
-            outline: none;
-            margin: 10px 5%;
-            padding: 15px 10px;
-            font-size: 14px;
-            border: 2px solid silver;
-            border-radius: 5px;
-
+        .wrapper .sidebar ul li a{
+          display: block;
+          padding: 13px 30px;
+          border-bottom: 1px solid #10558d;
+          color: rgb(241, 237, 237);
+          font-size: 16px;
+          position: relative;
         }
-        input:focus {
-            border-color: #db5d5d;
 
+        .wrapper .sidebar ul li a .icon{
+          color: #dee4ec;
+          width: 30px;
+          display: inline-block;
         }
 
 
-        *,
-        *::after,
-        *::before{
-            box-sizing: border-box;
-            padding: 0;
-            margin: 0;
+
+        .wrapper .sidebar ul li a:hover,
+        .wrapper .sidebar ul li a.active{
+          color: #0c7db1;
+
+          background:white;
+            border-right: 2px solid rgb(5, 68, 104);
         }
 
-        .html{
-            font-size: 62.5%;
+        .wrapper .sidebar ul li a:hover .icon,
+        .wrapper .sidebar ul li a.active .icon{
+          color: #0c7db1;
         }
 
-        .navbar input[type="checkbox"],
-        .navbar .hamburger-lines{
-            display: none;
+        .wrapper .sidebar ul li a:hover:before,
+        .wrapper .sidebar ul li a.active:before{
+          display: block;
         }
 
-        .container{
-            max-width: 1200px;
-            width: 90%;
-            margin: auto;
+        .wrapper .section{
+          width: calc(100% - 225px);
+          margin-left: 225px;
+          transition: all 0.5s ease;
         }
 
-        .navbar{
-            box-shadow: 0px 5px 10px 0px #aaa;
-            position: fixed;
-            width: 100%;
-            background: #fff;
-            color: #000;
-            opacity: 0.85;
-            z-index: 100;
-        }
-
-        .navbar-container{
-            display: flex;
-            justify-content: space-between;
-            height: 64px;
-            align-items: center;
-        }
-
-        .menu-items{
-            order: 2;
-            display: flex;
-        }
-        .logo{
-            order: 1;
-            font-size: 2.3rem;
-        }
-
-        .menu-items li{
-            list-style: none;
-            margin-left: 1.5rem;
-            font-size: 1.3rem;
-        }
-
-        .navbar a{
-            color: #444;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease-in-out;
-        }
-
-        .navbar a:hover{
-            color: #117964;
-        }
-
-        @media (max-width: 768px){
-            .navbar{
-                opacity: 0.95;
-            }
-
-            .navbar-container input[type="checkbox"],
-            .navbar-container .hamburger-lines{
-                display: block;
-            }
-
-            .navbar-container{
-                display: block;
-                position: relative;
-                height: 64px;
-            }
-
-            .navbar-container input[type="checkbox"]{
-                position: absolute;
-                display: block;
-                height: 32px;
-                width: 30px;
-                top: 20px;
-                left: 20px;
-                z-index: 5;
-                opacity: 0;
-                cursor: pointer;
-            }
-
-            .navbar-container .hamburger-lines{
-                display: block;
-                height: 28px;
-                width: 35px;
-                position: absolute;
-                top: 20px;
-                left: 20px;
-                z-index: 2;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-            }
-
-            .navbar-container .hamburger-lines .line{
-                display: block;
-                height: 4px;
-                width: 100%;
-                border-radius: 10px;
-                background: #333;
-            }
-
-            .navbar-container .hamburger-lines .line1{
-                transform-origin: 0% 0%;
-                transition: transform 0.3s ease-in-out;
-            }
-
-            .navbar-container .hamburger-lines .line2{
-                transition: transform 0.2s ease-in-out;
-            }
-
-            .navbar-container .hamburger-lines .line3{
-                transform-origin: 0% 100%;
-                transition: transform 0.3s ease-in-out;
-            }
-
-            .navbar .menu-items{
-                padding-top: 100px;
-                background: #fff;
-                height: 100vh;
-                max-width: 300px;
-                transform: translate(-150%);
-                display: flex;
-                flex-direction: column;
-                margin-left: -40px;
-                padding-left: 40px;
-                transition: transform 0.5s ease-in-out;
-                box-shadow:  5px 0px 10px 0px #aaa;
-                overflow: scroll;
-            }
-
-            .navbar .menu-items li{
-                margin-bottom: 1.8rem;
-                font-size: 1.1rem;
-                font-weight: 500;
-            }
-
-            .logo{
-                position: absolute;
-                top: 10px;
-                right: 15px;
-                font-size: 2.5rem;
-            }
-
-            .navbar-container input[type="checkbox"]:checked ~ .menu-items{
-                transform: translateX(0);
-            }
-
-            .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1{
-                transform: rotate(45deg);
-            }
-
-            .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2{
-                transform: scaleY(0);
-            }
-
-            .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3{
-                transform: rotate(-45deg);
-            }
+        .wrapper .section .top_navbar{
+          background: rgb(7, 105, 185);
+          height: 50px;
+          display: flex;
+          align-items: center;
+          padding: 0 30px;
 
         }
 
-        @media (max-width: 500px){
-            .navbar-container input[type="checkbox"]:checked ~ .logo{
-                display: none;
-            }
+        .wrapper .section .top_navbar .hamburger a{
+          font-size: 28px;
+          color: #f4fbff;
+        }
+
+        .wrapper .section .top_navbar .hamburger a:hover{
+          color: #a2ecff;
+        }
+
+         .wrapper .section .container{
+          margin: 30px;
+          background: #fff;
+          padding: 50px;
+          line-height: 28px;
+        }
+
+        body.active .wrapper .sidebar{
+          left: -225px;
         }
     </style>
 </head>
 <body>
-    <div id="main">
-        <nav class="navbar">
-                <div class="navbar-container container">
-                    <input type="checkbox" name="" id="">
-                    <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
-                    </div>
-                    <ul class="menu-items">
-                        <li><a href="/recom.html">Рекомендовать</a></li>
-                        <li><a href="/reset_dk.html">Изменение рангов команд</a></li>
-                    </ul>
-                    <h1 class="logo">Навигация</h1>
-                </div>
-            </nav>
-          
+
+    <div class="wrapper">
+       <div class="section">
+    <div class="top_navbar">
+      <div class="hamburger">
+        <a href="#">
+          <i class="fas fa-bars"></i>
+        </a>
+      </div>
     </div>
-    <form id="form">
-        <input type="text" placeholder="Имя" id="user_name">
-        <input type="text" placeholder="Почта" id="user_email">
-        <input type="text" placeholder="Телефон" id="user_phone">
-        <div id="error"></div>
-        <button id="order">Рекомендовать</button>
-    </form>
-    <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
-    <script>
-        document.getElementById("error").innerText = ''
-        let tg = window.Telegram.WebApp;
-        let buy = document.getElementById('start');
-        let order = document.getElementById('order');
-        tg.expand();
+    <div class="container">
 
-        buy.addEventListener('click', () => {
-        
-            document.getElementById("main").style.display = "none";
-            document.getElementById("form").style.display = "block";
-            document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name + " " + tg.initDataUnsafe.user.last_name
+    </div>
+  </div>
+        <div class="sidebar">
+            <div class="profile">
+                <img src="https://1.bp.blogspot.com/-vhmWFWO2r8U/YLjr2A57toI/AAAAAAAACO4/0GBonlEZPmAiQW4uvkCTm5LvlJVd_-l_wCNcBGAsYHQ/s16000/team-1-2.jpg" alt="profile_picture">
+                <h3>Anamika Roy</h3>
+                <p>Designer</p>
+            </div>
+            <ul>
+                <li>
+                    <a href="#" class="active">
+                        <span class="icon"><i class="fas fa-home"></i></span>
+                        <span class="item">Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-desktop"></i></span>
+                        <span class="item">My Dashboard</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-user-friends"></i></span>
+                        <span class="item">People</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-tachometer-alt"></i></span>
+                        <span class="item">Perfomance</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-database"></i></span>
+                        <span class="item">Development</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-chart-line"></i></span>
+                        <span class="item">Reports</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-user-shield"></i></span>
+                        <span class="item">Admin</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <span class="icon"><i class="fas fa-cog"></i></span>
+                        <span class="item">Settings</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
 
-        });
+    </div>
 
-        order.addEventListener("click", () => {
-            let name = document.getElementById("user_name").value;
-            let email = document.getElementById("user_email").value;
-            let phone = document.getElementById("user_phone").value;
-            if(name.length < 5) {
-                document.getElementById("error").innerText = 'Ошибка в имени';
-                return
-            }
-            if(email.length < 5) {
-                document.getElementById("error").innerText = 'Ошибка в почте';
-                return
-            }
-
-            if(phone.length < 5) {
-                document.getElementById("error").innerText = 'Ошибка в номере';
-                return
-            }
-
-
-            let data = {
-                name: name,
-                email: email,
-                phone: phone
-            }
-            tg.sendData(JSON.stringify(data))
-            tg.close();
-        })
-    </script>
 </body>
 </html>
