--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         .sidenav a {
           padding: 8px 8px 8px 32px;
           text-decoration: none;
-          font-size: 25px;
+          font-size: 60px;
           color: #818181;
           display: block;
           transition: 0.3s;
@@ -81,7 +81,7 @@
             width: 100px;
             height: 20px;
             background-color: #333;
-            margin: 6px 0;
+            margin: 20px 0;
             transition: 0.4s;
             }
 
@@ -128,7 +128,7 @@
 
         /* Set the width of the side navigation to 250px */
         function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("mySidenav").style.width = "60%";
         }
 
         /* Set the width of the side navigation to 0 */
