--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           z-index: 1; /* Stay on top */
           top: 0; /* Stay at the top */
           left: 0;
-          background-color: #111; /* Black*/
+          background-color: var(--tg-theme-bg-color); /* Black*/
           overflow-x: hidden; /* Disable horizontal scroll */
           padding-top: 60px; /* Place content 60px from the top */
           transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
@@ -21,18 +21,20 @@
         /* The navigation menu links */
         .sidenav a {
           padding: 8px 8px 8px 32px;
+          border: 10px;
+          border-radius: 5px;
           text-decoration: none;
           font-size: 60px;
           display: block;
           transition: 0.3s;
-          color: var(--tg-theme-button-color);
-          background: var(--tg-theme-button-text-color);
+          color: var(--tg-theme-text-color);
+          background: var(--tg-theme-button-color);
         }
 
         /* When you mouse over the navigation links, change their color */
         .sidenav a:hover {
-          color: var(--tg-theme-secondary-color);
-          background: var(--tg-theme-secondary-bg-color);
+          color: var(--tg-theme-secondary-bg-color);
+      
         }
 
         /* Position and style the close button (top right corner) */
