--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
         /* The navigation menu links */
         .sidenav a {
           padding: 8px 8px 8px 32px;
-          border: 10px;
+          border: 30;
           border-radius: 5px;
           text-decoration: none;
           font-size: 60px;
           display: block;
           transition: 0.3s;
           color: var(--tg-theme-text-color);
-          background: var(--tg-theme-button-color);
+          background: var(--tg-theme-secondary-bg-color);
         }
 
         /* When you mouse over the navigation links, change their color */
         .sidenav a:hover {
-          color: var(--tg-theme-secondary-bg-color);
+          color: var(--tg-theme-header-bg-color)
       
         }
 
