--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
         /* The navigation menu links */
         .sidenav a {
+          margin-top: 30px;
           padding: 8px 8px 8px 32px;
-          border: 30;
+          border: 30px;
           border-radius: 5px;
           text-decoration: none;
           font-size: 60px;
@@ -43,13 +44,14 @@
           top: 0;
           right: 25px;
           font-size: 36px;
-          margin-left: 50px;
+          margin-left: 55%;
         }
 
         /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
         #main {
           transition: margin-left .5s;
           padding: 20px;
+          background: var(--tg-theme-secondary-bg-color);
         }
 
         /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
