--- a/recom.html
+++ b/recom.html
@@ -3,8 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /* The side navigation menu */
+        .sidenav {
+          height: 100%; /* 100% Full-height */
+          width: 0; /* 0 width - change this with JavaScript */
+          position: fixed; /* Stay in place */
+          z-index: 1; /* Stay on top */
+          top: 0; /* Stay at the top */
+          left: 0;
+          background-color: #03426A; /* Black*/
+          overflow-x: hidden; /* Disable horizontal scroll */
+          padding-top: 60px; /* Place content 60px from the top */
+          transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+        }
+
+        /* The navigation menu links */
+        .sidenav a {
+          margin-top: 30px;
+          padding: 8px 8px 8px 32px;
+          border-radius: 40px;
+          left: 20px;
+          margin-right: 20px;
+          margin-left: 20px;
+          right: 20px;
+          text-decoration: none;
+          font-size: 60px;
+          display: block;
+          transition: 0.3s;
+          color: #3E97D1;
+          background: #24587A;
+        }
+
+        /* When you mouse over the navigation links, change their color */
+        .sidenav a:hover {
+          color: #65A6D1;
+          background: #0A67A3;
+        }
+
+        /* Position and style the close button (top right corner) */
+        .sidenav .closebtn {
+          padding: 0px 0px 0px 0px;
+          position: absolute;
+          margin-top: 0px;
+          top: 0px;
+          right: 10px;
+          margin-right: 10px;
+          margin-left: 85%;
+          background: transparent;
+          font-size: 100px;
+
+        }
+        .sidenav .closebtn:hover {
+          background: transparent;
+        }
+        /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+        #main {
+          transition: margin-left .5s;
+          padding: 20px;
+          background: var(--tg-theme-secondary-bg-color);
+        }
+
+        /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+        @media screen and (max-height: 450px) {
+          .sidenav {padding-top: 15px;}
+          .sidenav a {font-size: 18px;}
+        }
+
+        button {
+            border: 0;
+            border-radius: 5px;
+            margin-top: 10px;
+            height: 30px;
+            width: 100px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 500ms ease;
+            color: var(--tg-theme-button-color);
+            background: var(--tg-theme-button-text-color);
+        }
+        button:hover {
+            background: var(--tg-theme-secondary-bg-color);
+        }
+
+        .container {
+            display: inline-block;
+            cursor: pointer;
+            }
+
+        .bar1, .bar2, .bar3 {
+            width: 140px;
+            height: 20px;
+            background-color: #333;
+            margin: 20px 0;
+            transition: 0.4s;
+            }
+
+        .change .bar1 {
+            transform: translate(0, 11px) rotate(-45deg);
+            }
+
+        .change .bar2 {opacity: 0;}
+
+        .change .bar3 {
+            transform: translate(0, -11px) rotate(45deg);
+            }
+        .no-click {
+            pointer-events: none;
+            cursor: default;
+            color: #65A6D1;
+            background: #0A67A3;
+            }
+
+    </style>
 </head>
 <body>
-    <p>рекомендация</p>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Основное</a>
+        <a href="recom.html" class="no-click">Рекомендовать</a>
+        <a href="reset_dk.html">Изменить ранг</a>
+        <!-- <a href="https://ivansalou288-tech.github.io/web_admin_bot.github.io/index">Основное</a>
+        <a href="https://ivansalou288-tech.github.io/web_admin_bot.github.io/recom">Рекомендовать</a>
+        <a href="https://ivansalou288-tech.github.io/web_admin_bot.github.io/reset_dk">Изменить ранг</a> -->
+
+      </div>
+      
+      <!-- Use any element to open the sidenav -->
+
+      <div class="container" onclick="openNav()">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+      <div id="main">
+      </div>
+      <script src="https://telegram.org/js/telegram-web-app.js?59"></script>
+      <script>
+        let tg = window.Telegram.WebApp;
+        tg.expand();
+        let navig = document.getElementById('open_nav');
+        navig.addEventListener('click', () => openNav());
+
+
+        /* Set the width of the side navigation to 250px */
+        function openNav() {
+        document.getElementById("mySidenav").style.width = "60%";
+        }
+
+        /* Set the width of the side navigation to 0 */
+        function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+
+        }
+      </script>
 </body>
 </html>
